package com.directi.training.dip.exercice_refactored;

import java.io.IOException;

public interface IDataReader {
    String readData() throws IOException;
}