package com.directi.training.dip.exercice_refactored;

import java.io.IOException;

public interface IDataWriter {
    void writeData(String data) throws IOException;
}

